# Change Log
All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](http://keepachangelog.com/) 
and this project adheres to [Semantic Versioning](http://semver.org/).

## [0.1.4] 2017 Mar 27
#### added
- timer added in the begining of first simulation and at the end of last step
of analysis
- starting experiment in comet of staging method


## [0.1.3] 2017 mar 26
#### modified
- save errno of streaming read, so receiver will stop correctly
- add parameter 'mode' to insert_into_adios(), for keep, "a"(append) mode will
be used(first iteration use "w" to creat the file)
be used

#### added
- xml files are splited for different transport methods in xmls dir
- run_lbm will select different xml based on preprocessor

## [0.1.2] 2017 mar 25
#### fixed
mpiio need to use scratch path explicitly
#### NNotes:
- for mppio:
	1. use scratch path explicitly for adios variable
	2. buffer size in xml shoul be larger than groupsize
	3. for a application with both MPI-io and staging read, init_read_method
	first than init_adios
#### changed
add kep using mpiio, now new ads_adaptor.c/h is created
## [0.1.1] 2017 Mar 24
#### Notes
- most data generated by lbm is 0
- testes 1 proc, correct
#### ADD
- add analysis component

## [0.1.0] 2017 Mar 23
#### Changed
- removed blocks, now each process need to prepare contiguous buffer for adios
#### To do
- use small size, verify the correctness of data read
