@@ -1,0 +1,94 @@
+#!/bin/bash
+#SBATCH --job-name="dbroker_adios_comet"
+#SBATCH -A prd157
+#SBATCH --output="results/%j.out"
+#SBATCH --partition=compute
+#SBATCH --nodes=1
+#SBATCH --ntasks-per-node=16
+#SBATCH --export=ALL
+#SBATCH -t 00:5:00
+
+#This job runs with 2 nodes, 24 cores per node for a total of 48 cores.
+#ibrun in verbose mode will give binding detail
+
+##################parameter setting#################
+CASE_NAME=dimes_keep
+FILESIZE2PRODUCE=256 # 64*64*256*2*8 = 16MB per proc
+NSTOP=100 # how many steps
+PROCS_SERVER=1 # dspaces server
+PROCS_PRODUCER=8
+PROCS_CONSUMER=$((PROCS_PRODUCER/2))
+
+####################################################
+#PROJECT_ROOT=/home/rlu/Workspaces/data_broker_lammps
+echo "case=$CASE_NAME datasize=$FILESIZE2PRODUCE nstops=$NSTOP procs_server=$PROCS_SERVER procs_producers=$PROCS_PRODUCER procs_consumer=$PROCS_CONSUMER"
+
+PBS_O_HOME=$HOME
+PBS_O_WORKDIR=$(pwd)
+SCRATCH_DIR=/oasis/scratch/comet/rlu/temp_project/data_broker_adios/${SLURM_JOBID}
+BUILD_DIR=${PBS_O_WORKDIR}/build_${CASE_NAME}
+
+BIN_PRODUCER=${BUILD_DIR}/bin/run_lbm;
+BIN_CONSUMER=${BUILD_DIR}/bin/adios_read_global;
+
+#This job runs with 3 nodes  
+#ibrun in verbose mode will give binding detail  
+#BUILD=${PBS_O_WORKDIR}/build_dspaces/bin
+DS_SERVER=${PBS_O_HOME}/envs/Dataspacesroot/bin/dataspaces_server
+PBS_RESULTDIR=${PBS_O_WORKDIR}/results/${SLURM_JOBID}
+
+
+
+DS_CLIENT_PROCS=$((${PROCS_PRODUCER} + ${PROCS_CONSUMER}))
+
+echo "${DS_CLIENT_PROCS} clients, $PROCS_SERVER server"
+
+mkdir -pv ${PBS_RESULTDIR}
+mkdir -pv ${SCRATCH_DIR}
+cd $PBS_O_WORKDIR
+
+## Clean up
+rm -f conf *.log srv.lck
+rm -f dataspaces.conf
+
+## Create dataspaces configuration file
+# note that we now have 400 regions
+
+#dims = 5, 300000, 10
+#dims = 2, 1500000, 1
+# 64*64*256 will generate 1048576 lines
+DS_LIMIT=$((${FILESIZE2PRODUCE}*${FILESIZE2PRODUCE}*${FILESIZE2PRODUCE}/16)) # make sure dspaces can hold all data
+
+echo "total number of lines is $DS_LIMIT"
+
+echo "## Config file for DataSpaces
+ndim = 3
+dims = 2, $((DS_LIMIT*2)), 1
+max_versions = 5
+max_readers = 1
+lock_type = 2
+" > dataspaces.conf
+
+## Run DataSpaces servers
+ibrun -np $PROCS_SERVER ${DS_SERVER} -s $PROCS_SERVER -c $DS_CLIENT_PROCS >& ${PBS_RESULTDIR}/server.log &
+
+echo "server applciation lauched"
+## Give some time for the servers to load and startup
+while [ ! -f conf ]; do
+    sleep 1s
+done
+sleep 5s  # wait server to fill up the conf file
+
+#aprun -n 4 ${BUILD}/adios_write_global  &> ${PBS_RESULTDIR}/adios_write.log &
+
+#Use ibrun to run the MPI job. It will detect the MPI, generate the hostfile
+# and doing the right binding. With no options ibrun will use all cores.
+#export OMP_NUM_THREADS=1
+ibrun  -np $PROCS_PRODUCER ${BIN_PRODUCER} ${NSTOP} ${FILESIZE2PRODUCE} ${SCRATCH_DIR} &> ${PBS_RESULTDIR}/producer.log &
+echo "writer applciation lauched"
+
+ibrun  -np $PROCS_CONSUMER ${BIN_CONSUMER} ${SCRATCH_DIR} &> ${PBS_RESULTDIR}/consumer.log
+echo "reader applciation lauched"
+
+## Wait for the entire workflow to finish
+wait
